--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port= 8081
 # ===============================
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/medcards
+spring.datasource.url=jdbc:postgresql://localhost:5432/medcardsTest
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -15,6 +15,7 @@ spring.datasource.password=root
 # ===============================
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
