change DB to H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,23 @@
-
 server.port= 8081
 
 # ===============================
 # DATABASE
 # ===============================
+#<property name="hibernate.dialect" value="org.hibernate.dialect.H2Dialect"/>
+#<property name="hibernate.connection.driver_class" value="org.h2.Driver"/>
+#<property name="hibernate.connection.url" value="jdbc:h2:./target/app"/>
+#<property name="hibernate.connection.user" value="sa"/>
+#<property name="hibernate.connection.password" value=""/>
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/medcards
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:./target/app
+spring.datasource.username=sa
+spring.datasource.password=
+
+# spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/medcards
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
 # ===============================
 # JPA / HIBERNATE
@@ -17,5 +26,8 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+
 
