--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port= 8081
+server.port= 8080
 
 # ===============================
 # DATABASE
@@ -9,10 +9,10 @@ server.port= 8081
 #<property name="hibernate.connection.user" value="sa"/>
 #<property name="hibernate.connection.password" value=""/>
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:./target/app
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:./target/app
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 # spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/medcards
@@ -23,11 +23,10 @@ spring.datasource.password=
 # JPA / HIBERNATE
 # ===============================
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
 
