--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: java
 jdk:
   - oraclejdk11
+addons:
+  sonarcloud:
+    organization: "sergant1987"
+    token:
+      secure: "**************************" # encrypted value of your token
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Sergant1987_levelup-jj
