add postgres in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ addons:
   sonarcloud:
     organization: "sergant1987"
     token:
-      secure: "**************************" # encrypted value of your token
+      secure: "**************************" # encrypted value of your
 
+before_script:
+  - psql -c "CREATE DATABASE medcards;" -U postgres
+  - psql -c "CREATE USER postgres WITH PASSWORD 'root';" -U postgres
+  -
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Sergant1987_levelup-jj
