--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ addons:
     token:
       secure: "552cf00f9a487995223d3bfacf058a02fb948176" # encrypted value of your
 
-before_script:
-  - psql -c "CREATE DATABASE medcards;" -U postgres
-  - psql -c "CREATE USER postgres WITH PASSWORD 'root';" -U postgres
+#before_script:
+#  - psql -c "CREATE DATABASE medcards;" -U postgres
+#  - psql -c "CREATE USER postgres WITH PASSWORD 'root';" -U postgres
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
