--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ addons:
 #  - psql -c "CREATE DATABASE medcards;" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD 'root';" -U postgres
 
-script:
+#script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Sergant1987_levelup-jj
+#  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Sergant1987_levelup-jj
