--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ addons:
 
 services:
   - postgresql
-  -
 before_script:
   - psql -c "CREATE DATABASE medcards;" -U postgres
-  - psql -c "CREATE USER postgres WITH PASSWORD 'root';" -U postgres
+#  - psql -c "CREATE USER postgres WITH PASSWORD 'root';" -U postgres
 
 #script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
