--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,13 @@
 					</dependency>
 				</dependencies>
 				<configuration>
+					<excludes>
+						<exclude>
+							**/Abstract*.java
+						</exclude>
+					</excludes>
 					<includes>
+
 						<include>**/Test*.java</include>
 						<include>**/*Test.java</include>
 					</includes>
