--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
   - postgresql
 before_script:
   - psql -c "CREATE DATABASE medcards;" -U postgres
-
-#script:
+  -
+script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Sergant1987_levelup-jj
